--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -6,24 +6,23 @@
 </HEAD>
 
 <BODY>
-      {% if state is mapping %}
+      {% if states %}
       <H1>States</H1>
       <UL>
-            {% for s in state.values()|sort(attribute="name") %}
-            <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
+            {% for state in states|sort(attribute="name") %}
+            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
             {% endfor %}
       </UL>
-      {% elif state is defined %}
+      {% elif not_found %}
+      <H1>Not found!</H1>
+      {% elif state %}
       <H1>State: {{ state.name }}</H1>
       <H3>Cities:</H3>
       <UL>
-            {% for city in state.cities|sort(attribute="name") %}
+        {% for city in state.cities|sort(attribute="name") %}
             <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-            {% endfor %}
+        {% endfor %}
       </UL>
-      {% else %}
-      <H1>Not found!</H1>
       {% endif %}
 </BODY>
-
 </HTML>
